--- a/server/views/pages/edit.ejs
+++ b/server/views/pages/edit.ejs
@@ -75,9 +75,7 @@
       cols="30"
       rows="12"
       placeholder="Page Content"
-    >
-<%= page.content %></textarea
-    >
+    ></textarea>
   </div>
 
   <div class="form-group mb-4">
@@ -131,3 +129,12 @@
     </div>
   </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+
+<script>
+  var simplemde = new SimpleMDE({
+    element: document.getElementById("content"),
+  });
+  simplemde.value(`<%= page.content %>`);
+</script>
