--- a/server/views/pages/edit.ejs
+++ b/server/views/pages/edit.ejs
@@ -64,6 +64,13 @@
         required
       />
     </div>
+    <div class="col">
+      <div class="btn-group-toggle" data-toggle="buttons">
+      <label class="btn btn-secondary active">
+        <input type="checkbox" checked autocomplete="off" id="Html"> Use Html
+      </label>
+      </div>
+    </div>
   </div>
 
   <div class="form-group mb-4">
