--- a/server/views/pages/edit.ejs
+++ b/server/views/pages/edit.ejs
@@ -67,7 +67,7 @@
     <div class="col">
       <div class="btn-group-toggle" data-toggle="buttons">
       <label class="btn btn-secondary active">
-        <input type="checkbox" checked autocomplete="off" id="Html"> Use Html
+        <input type="checkbox" checked autocomplete="off" id="useHtml" value="<%=page.useHtml%>"> Use Html
       </label>
       </div>
     </div>
