add to the html option

--- a/server/views/pages/new.ejs
+++ b/server/views/pages/new.ejs
@@ -52,6 +52,12 @@
     </div>
   </div>
 
+  <div class="col">
+
+      <input type="checkbox"id="useHtml"> Use Html
+ 
+  </div>
+
   <div class="form-group mb-4">
     <label for="content">Content</label>
     <textarea
