--- a/server/views/pages/edit.ejs
+++ b/server/views/pages/edit.ejs
@@ -64,14 +64,10 @@
         required
       />
     </div>
+   
     <div class="col">
-      <div class="btn-group-toggle" data-toggle="buttons">
-      <label class="btn btn-secondary active">
-        <input type="checkbox" checked autocomplete="off" id="useHtml" value="<%=page.useHtml%>"> Use Html
-      </label>
-      </div>
+        <input type="checkbox" id="useHtml" value="<%=page.useHtml%>"> Use Html
     </div>
-  </div>
 
   <div class="form-group mb-4">
     <label for="content">Content</label>
