--- a/server/views/users/main.ejs
+++ b/server/views/users/main.ejs
@@ -27,8 +27,9 @@
   <table class="table table-striped table-sm">
     <thead>
       <tr>
-        <th scope="col">First Name</th>
-        <th scope="col">Last Name</th>
+        <th scope="col">Full Name</th>
+        <th scope="col">Username</th>
+        <th scope="col">Type</th>
         <th scope="col">Role</th>
         <th scope="col">School</th>
         <th scope="col">Email</th>
@@ -39,8 +40,9 @@
     <tbody>
       <% users.forEach(element => { %>
       <tr class="align-middle">
-        <td><%= element.firstName %></td>
-        <td><%= element.lastName %></td>
+        <td><%= element.fullName %></td>
+        <td><%= element.username %></td>
+        <td><%= locals.utils.firstToUpper(element.type) %></td>
         <td><%= locals.utils.firstToUpper(element.role) %></td>
         <td><%= locals.utils.firstToUpper(element.school) %></td>
         <td><%= element.email %></td>
