--- a/server/views/partials/sidebar.ejs
+++ b/server/views/partials/sidebar.ejs
@@ -29,9 +29,18 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/about">
+        <a class="nav-link active" href="/about">
           <i class="bi bi-patch-question"></i>
           About
+        </a>
+      </li>
+      <li class="nav-item">
+        &nbsp;
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="/logout">
+          <i class="bi bi-file-x"></i>
+          <span style="color:grey">Logout</span>
         </a>
       </li>
     </ul>
