--- a/server/views/pages/view.ejs
+++ b/server/views/pages/view.ejs
@@ -56,7 +56,7 @@
   <li class="list-group-item">
     <div class="row">
       <div class="col" style="max-width: 140px"><b>Content:</b></div>
-      <div class="col"><pre><%= page.content %></pre></div>
+      <div class="col"><pre><%- page.content %></pre></div>
     </div>
   </li>
 
