--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,7 +1,5 @@
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="/"
-    >Ligerbots Admin</a
-  >
+  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="/">Ligerbots Admin</a>
 
   <button
     class="navbar-toggler position-absolute d-md-none collapsed"
@@ -29,4 +27,5 @@
       aria-label="Search"
     />
   </form>
+  <div style="color:white"><%= locals.username %></div>
 </header>
