--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -27,5 +27,5 @@
       aria-label="Search"
     />
   </form>
-  <div style="color:white"><%= locals.username %></div>
+  <div style="padding:1em;color:white"><%= locals.username %></div>
 </header>
