--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -21,7 +21,7 @@
 <form id="login">
   <table>
     <tr><td><label for="username">Username</label></td><td><input type="string" id="username" name="username" required/></td></tr>
-    <tr><td><label for="password">Password</label></td><td><input type="string" id="password" name="password" required/></td></tr>
+    <tr><td><label for="password">Password</label></td><td><input type="password" id="password" name="password" required/></td></tr>
     <tr><td>&nbsp;</td></tr>
     <tr><td>&nbsp;</td><td><button type="submit">Submit</button></td></tr>
   </table>
