--- a/server/views/layouts/main.ejs
+++ b/server/views/layouts/main.ejs
@@ -28,11 +28,14 @@
     <%- include('../partials/header.ejs') %>
 
     <div class="container-fluid">
+      <% if (locals?.username) { %> 
       <div class="row">
         <%- include('../partials/sidebar.ejs') %>
-
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4"><%- body %></main>
       </div>
+      <% } else { %>
+        <main><%- body %></main>
+      <% } %>
     </div>
 
     <script
