--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -4,17 +4,7 @@
   <h1 class="h2">Login</h1>
 </div>
 
-<% messages.forEach(element => { %>
-<div class="alert alert-success alert-dismissible fade show" role="alert">
-  <%= element %>
-  <button
-    type="button"
-    class="btn-close"
-    data-bs-dismiss="alert"
-    aria-label="Close"
-  ></button>
-</div>
-<% }) %>
+<%- include('partials/messages') %>
 
 <div class="error" style="background-color: red;color:white"></div>
 <br/>
