--- a/server/views/posts/main.ejs
+++ b/server/views/posts/main.ejs
@@ -11,14 +11,4 @@
   </div>
 </div>
 
-<% messages.forEach(element => { %>
-<div class="alert alert-success alert-dismissible fade show" role="alert">
-  <%= element %>
-  <button
-    type="button"
-    class="btn-close"
-    data-bs-dismiss="alert"
-    aria-label="Close"
-  ></button>
-</div>
-<% }) %>
+<%- include('../partials/messages') %>
