--- a/server/views/search.ejs
+++ b/server/views/search.ejs
@@ -10,7 +10,7 @@
 </div>
 
 <div class="table-responsive">
-  <% if (users != "") { %>
+  <% if (users !== "") { %>
 
   <table class="table table-striped table-sm">
     <thead>
