--- a/server/views/partials/sidebar.ejs
+++ b/server/views/partials/sidebar.ejs
@@ -42,7 +42,7 @@
       <li class="nav-item">
         <a class="nav-link active" href="/logout">
           <i class="bi bi-file-x"></i>
-          <span style="color:grey">Logout</span>
+          <span style="color:red">Logout</span>
         </a>
       </li>
     </ul>
