--- a/server/views/404.ejs
+++ b/server/views/404.ejs
@@ -1,3 +1,8 @@
 <h1>404 - whoops! that thing no exist!</h1>
-
-<img src="/img/clouds.gif" loop="infinite"/>
+<div id="clouds"><img src="/img/clouds.gif"/></div>
+<style>
+  #clouds img {
+    width:100%; 
+    height:100%;
+  }
+</style>
