--- a/server/views/pages/new.ejs
+++ b/server/views/pages/new.ejs
@@ -30,7 +30,7 @@
 
     <div class="col">
       <label for="author">Author</label>
-      <input type="text" class="form-control" id="author" name="author" value="" placeholder="Author Name" required />
+      <input type="text" class="form-control" id="author" name="author" value="<%- locals?.username %>" placeholder="Author Name" required />
     </div>
   </div>
 
