--- a/server/views/partials/messages.ejs
+++ b/server/views/partials/messages.ejs
@@ -1,6 +1,6 @@
-<% messages.forEach(element => { %>
+<% messages.forEach(message => { %>
   <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <%= element %>
+    <%= message %>
     <button
       type="button"
       class="btn-close"
