--- a/server/views/users/main.ejs
+++ b/server/views/users/main.ejs
@@ -11,9 +11,9 @@
   </div>
 </div>
 
-<% messages.forEach(element => { %>
+<% messages.forEach(message => { %>
 <div class="alert alert-success alert-dismissible fade show" role="alert">
-  <%= element %>
+  <%= message %>
   <button
     type="button"
     class="btn-close"
@@ -27,29 +27,31 @@
   <table class="table table-striped table-sm">
     <thead>
       <tr>
-        <th scope="col">Full Name</th>
         <th scope="col">Username</th>
+        <th scope="col">Full Name</th>
         <th scope="col">Type</th>
         <th scope="col">Role</th>
         <th scope="col">School</th>
+        <th scope="col">Grade</th>
         <th scope="col">Email</th>
         <th scope="col" class="text-end">Show | Edit</th>
       </tr>
     </thead>
 
     <tbody>
-      <% users.forEach(element => { %>
+      <% records.forEach(record => { %>
       <tr class="align-middle">
-        <td><%= element.fullName %></td>
-        <td><%= element.username %></td>
-        <td><%= locals.utils.firstToUpper(element.type) %></td>
-        <td><%= locals.utils.firstToUpper(element.role) %></td>
-        <td><%= locals.utils.firstToUpper(element.school) %></td>
-        <td><%= element.email %></td>
+        <td><%= record.username %></td>
+        <td><%= record.fullname %></td>
+        <td><%= record.type %></td>
+        <td><%= record.role %></td>
+        <td><%= record.school %></td>
+        <td><%= record.grade %></td>
+        <td><%= record.emailaddr %></td>
         <td class="text-end">
           <div class="d-flex flex-row justify-content-end gap-2">
             <a
-              href="/users/<%= element._id %>"
+              href="/users/<%= record._id %>"
               type="button"
               class="btn btn-primary btn-small"
             >
@@ -57,7 +59,7 @@
             </a>
 
             <a
-              href="/users/edit/<%= element._id %>"
+              href="/users/edit/<%= record._id %>"
               type="button"
               class="btn btn-warning btn-small"
             >
@@ -71,34 +73,45 @@
   </table>
 </div>
 
-<% if (users.length > 0) { %>
-<nav aria-label="Dashboard Pagination">
-  <ul class="pagination justify-content-center mt-5">
-    <% if (current == 1) { %>
-    <li class="page-item disabled"><a href="#" class="page-link">First</a></li>
-    <% } else { %>
-    <li class="page-item"><a href="/?page=1" class="page-link">First</a></li>
-    <% } %> <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %> <%
-    if(i !== 1) { %>
-    <li class="page-item disabled"><a href="#" class="page-link">...</a></li>
-    <% } %> <% for(; i <= (Number(current) + 4) && i <= pages; i++ ) { %> <% if
-    (i == current) { %>
-    <li class="page-item disabled">
-      <a href="#" class="page-link"><%= i %></a>
-    </li>
-    <% } else { %>
-    <li class="page-item">
-      <a href="/?page=<%= i %>" class="page-link"><%= i %></a>
-    </li>
-    <% } %> <% if (i == Number(current) + 4 && i < pages) { %>
-    <li class="page-item disabled"><a href="#" class="page-link">...</a></li>
-    <% } %> <% } %> <% if (current == pages) { %>
-    <li class="page-item disabled"><a href="#" class="page-link">Last</a></li>
-    <% } else { %>
-    <li class="page-item">
-      <a href="/?page=<%= pages %>" class="page-link">Last</a>
-    </li>
-    <% } %>
-  </ul>
-</nav>
+
+<% if (numPages > 0) { %>
+  <nav aria-label="Dashboard Pagination">
+    <ul class="pagination justify-content-center mt-5">
+      <% if (pageNum === 1) { %>
+        <li class="page-item disabled"><a href="#" class="page-link">First</a></li>
+      <% } else { %>
+        <li class="page-item"><a href="/users?page=1" class="page-link">First</a></li>
+      <% } %> 
+
+      <% var i = (pageNum > maxPages ? pageNum - maxPages - 1 : 1) %> 
+
+      <% if(i !== 1) { %>
+        <li class="page-item disabled"><a href="#" class="page-link">...</a></li>
+      <% } %>
+
+      <% for(; i <= pageNum + maxPages - 1 && i <= numPages; i++ ) { %> 
+        <% if (i === pageNum) { %>
+          <li class="page-item disabled">
+            <a href="#" class="page-link"><%= i %></a>
+          </li>
+        <% } else { %>
+        <li class="page-item">
+          <a href="/users?page=<%= i %>" class="page-link"><%= i %></a>
+        </li>
+        <% } %> 
+        <% if (i === pageNum + maxPages - 1 && i < numPages) { %>
+          <li class="page-item disabled"><a href="#" class="page-link">...</a></li>
+        <% } %> 
+      <% } %> 
+
+      <% if (pageNum === numPages) { %>
+      <li class="page-item disabled"><a href="#" class="page-link">Last</a></li>
+      <% } else { %>
+      <li class="page-item">
+        <a href="/users?page=<%= numPages %>" class="page-link">Last</a>
+      </li>
+      <% } %>
+
+    </ul>
+  </nav>
 <% } %>
